# chatapp

./: .pre-commit-config.yaml  index.html  package.json
.github/workflows/: build.yml
src/: App.vue  main.js  util.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  utils.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/fixtures/: config.default.yml
src/assets/: styles.css
src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
src/router/: index.js
src/store/: index.js
src/views/: Chat.vue  Login.vue  Register.vue
